// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporting APIs CSV Generation from ES|QL export from non-timebased data view csv from es|ql csv file matches 1`] = `
"eon,epoch,era,period
Phanerozoic,\\" Pliocene\\",Cenozoic,Neogene
Phanerozoic,\\" Holocene\\",Cenozoic,Quaternary
Phanerozoic,,Mesozoic,Cretaceous
Phanerozoic,,Mesozoic,Jurassic
Phanerozoic,,Paleozoic,Cambrian
Proterozoic,,Paleozoic,Permian
Archean,,,
Hadean,,,
"
`;

exports[`Reporting APIs CSV Generation from ES|QL export from non-timebased data view csv from es|ql job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=CSV%20Report.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "CSV Report",
}
`;

exports[`Reporting APIs CSV Generation from ES|QL export from timebased data view csv from es|ql export with time filter csv file matches 1`] = `
"\\"@message\\"
\\"143.84.142.7 - - [2015-09-20T00:00:00.000Z] \\"\\"GET /uploads/steven-hawley.jpg HTTP/1.1\\"\\" 200 1623 \\"\\"-\\"\\" \\"\\"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)\\"\\"\\"
\\"193.164.192.47 - - [2015-09-20T00:30:34.206Z] \\"\\"GET /uploads/michael-foreman.jpg HTTP/1.1\\"\\" 200 8537 \\"\\"-\\"\\" \\"\\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\"\\"\\"
\\"176.7.244.68 - - [2015-09-20T00:32:42.058Z] \\"\\"GET /uploads/james-pawelczyk.jpg HTTP/1.1\\"\\" 200 9196 \\"\\"-\\"\\" \\"\\"Mozilla/5.0 (X11; Linux i686) AppleWebKit/534.24 (KHTML, like Gecko) Chrome/11.0.696.50 Safari/534.24\\"\\"\\"
\\"237.56.90.184 - - [2015-09-20T00:35:21.445Z] \\"\\"GET /uploads/david-leestma.jpg HTTP/1.1\\"\\" 200 9790 \\"\\"-\\"\\" \\"\\"Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)\\"\\"\\"
\\"255.56.89.50 - - [2015-09-20T00:43:01.353Z] \\"\\"GET /uploads/michael-r-barratt.jpg HTTP/1.1\\"\\" 200 9583 \\"\\"-\\"\\" \\"\\"Mozilla/5.0 (X11; Linux x86_64; rv:6.0a1) Gecko/20110421 Firefox/6.0a1\\"\\"\\"
"
`;

exports[`Reporting APIs CSV Generation from ES|QL export from timebased data view csv from es|ql export with time filter job response data is correct 1`] = `
Object {
  "contentDisposition": "attachment; filename=Untitled%20discover%20search.csv",
  "contentType": "text/csv; charset=utf-8",
  "title": "Untitled discover search",
}
`;
